--- a/sass/_utilities.sass
+++ b/sass/_utilities.sass
@@ -9,3 +9,9 @@
         text-decoration: none
     li
         list-style: none
+@mixin main-hover 
+    transition: .3s
+    & :hover
+        color: $primary-color
+        
+
