estilizando btn do menu

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -32,5 +32,10 @@
                 margin: 5px 10px
                 a
                     color: $light-color
-                    @include main-hover 
+                    @include main-hover
+        .fas.fa-bars
+            font-size: 2rem
+            color: #fff
+            display: none 
+            
                     
