--- a/sass/_utilities.sass
+++ b/sass/_utilities.sass
@@ -9,9 +9,32 @@
         text-decoration: none
     li
         list-style: none
-@mixin main-hover 
+@mixin main-hover
     transition: .3s
     & :hover
         color: $primary-color
-        
+//botões
 
+.btn
+    padding: .6rem 1rem
+    border: 1px solid $light-color
+    text-transform: uppercase
+    border-radius: 5px
+    transition: .3s
+    color: $light-color
+
+    & :hover
+        border-color: $primary-color
+        color: $primary-color
+
+    &-primary
+        background-color: $primary-color
+        border-color: $primary-color
+
+        &:hover
+            background-color: transparent
+    &-rounded
+        margin-top: 1rem
+        border-radius: 2rem
+        padding: 1rem 1.5rem
+        
