--- a/sass/styles.css
+++ b/sass/styles.css
@@ -1,3 +1,33 @@
+.btn {
+  padding: .6rem 1rem;
+  border: 1px solid #fff;
+  text-transform: uppercase;
+  border-radius: 5px;
+  -webkit-transition: .3s;
+  transition: .3s;
+  color: #fff;
+}
+
+.btn :hover {
+  border-color: #ff520f;
+  color: #ff520f;
+}
+
+.btn-primary {
+  background-color: #ff520f;
+  border-color: #ff520f;
+}
+
+.btn-primary:hover {
+  background-color: transparent;
+}
+
+.btn-rounded {
+  margin-top: 1rem;
+  border-radius: 2rem;
+  padding: 1rem 1.5rem;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -71,5 +101,11 @@ li {
 
 #main-banner .nav-container-navbar li a :hover {
   color: #ff520f;
+}
+
+#main-banner .nav-container .fas.fa-bars {
+  font-size: 2rem;
+  color: #fff;
+  display: none;
 }
 /*# sourceMappingURL=styles.css.map */
