--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -33,9 +33,108 @@
                 a
                     color: $light-color
                     @include main-hover
+
         .fas.fa-bars
             font-size: 2rem
             color: #fff
-            display: none 
-            
-                    
+            display: none
+    .title-container
+        color: $light-color
+        display: flex
+        flex-direction: column
+        align-items: center
+        justify-content: center
+        height: 100%
+
+        h2
+            font-size: 3rem
+            @extend %title-text-shadow
+
+        h1
+            font-size: 4rem
+            margin-top: 1rem
+            @extend %title-text-shadow
+
+// SERVIÇOS
+
+.services-container
+    text-align: center
+    padding: 2rem
+    margin-bottom: 2rem
+    h2
+        @extend %section-title
+
+    .services-card-container
+        display: flex
+        flex-wrap: wrap
+        justify-content: space-around
+        padding: 2rem
+
+        .services-card
+            width: 30%
+            margin: 1%
+            padding: 2rem
+            border: 1px solid #ccc
+            transition: .3s
+            i
+                color: $primary-color
+                font-size: 4rem
+                display: block
+                margin-top: 1rem
+                margin-bottom: 1.5rem
+
+            h3
+                font-size: 1.5rem
+                margin-bottom: 1rem
+
+            p
+                color: $text-color
+
+            &:hover
+                border: transparent
+                box-shadow: 0 1px 10px #ccc
+.jobs-container
+    background-color: $secondary-bg
+    padding: 3rem
+
+    h2
+    @extend %section-title  // ver se esta na posição correta o titulo esta muito grande //
+
+    .jobs-list
+        display: flex
+        padding: 2rem
+
+        .first-job
+            width: 30%
+            height: 415px
+            margin: 0 2%
+            background-image: url('../img/job1.jpg')
+            position: relative
+            cursor: pointer
+            transition: .5s
+            @extend %center-bg
+            @extend %card-hover
+
+        .other-jobs-container
+            display: flex
+            flex-wrap: wrap
+            width: 68%
+
+            .job-card
+                width: 46%
+                height: 200px
+                position: relative
+                cursor: pointer
+                margin-bottom: 15px
+                margin-right: 15px
+                @extend %center-bg
+                @extend %card-hover
+
+            #job2
+                background-image: url('../img/job2.jpg')
+            #job3
+                background-image: url('../img/job3.jpg')
+            #job4
+                background-image: url('../img/job4.jpg')
+            #job5
+                background-image: url('../img/job5.jpg')
