--- a/sass/styles.css
+++ b/sass/styles.css
@@ -2,7 +2,7 @@
   text-shadow: 3px 2px #000;
 }
 
-.services-container h2, .jobs-container {
+.services-container h2, .jobs-container h2 {
   font-size: 3rem;
   margin-top: 2rem;
   text-align: center;
@@ -200,6 +200,7 @@ li {
 
 .services-container .services-card-container .services-card p {
   color: #8b8e94;
+  font-size: 1rem;
 }
 
 .services-container .services-card-container .services-card:hover {
@@ -263,5 +264,63 @@ li {
 
 .jobs-container .jobs-list .other-jobs-container #job5 {
   background-image: url("../img/job5.jpg");
+}
+
+.jobs-container .jobs-list .job-card-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 1.75rem;
+  background-color: rgba(0, 0, 0, 0.6);
+  border: 3px solid #ff520f;
+}
+
+.jobs-container .jobs-list .job-card-title {
+  text-align: center;
+  color: #fff;
+  font-size: 2.2rem;
+  -webkit-transition: .5s;
+  transition: .5s;
+  font-weight: bold;
+}
+
+.jobs-container .jobs-list .job-card-description {
+  text-align: center;
+  color: #fff;
+  padding: 1rem;
+  font-size: .9rem;
+}
+
+footer {
+  background-color: #1d1d1d;
+  color: #8b8e94;
+  padding: 5rem 2rem;
+}
+
+footer .footer-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+footer .footer-container .footer-title {
+  color: #fff;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+footer .footer-desc-container, footer .footer-links-container {
+  width: 50%;
+}
+
+footer .footer-desc-container p {
+  width: 80%;
+  line-height: 1.3;
 }
 /*# sourceMappingURL=styles.css.map */
