--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -89,6 +89,7 @@
 
             p
                 color: $text-color
+                font-size: 1rem
 
             &:hover
                 border: transparent
@@ -98,7 +99,7 @@
     padding: 3rem
 
     h2
-    @extend %section-title  // ver se esta na posição correta o titulo esta muito grande //
+        @extend %section-title  // ver se esta na posição correta o titulo esta muito grande //
 
     .jobs-list
         display: flex
@@ -138,3 +139,53 @@
                 background-image: url('../img/job4.jpg')
             #job5
                 background-image: url('../img/job5.jpg')
+        .job-card-cover
+            position: absolute
+            top: 0
+            left: 0
+            width: 100%
+            height: 100%
+            padding-top: 1.75rem
+            background-color: rgba(0, 0, 0, .6)
+            border: 3px solid $primary-color
+
+        .job-card-title
+            text-align: center
+            color: #fff
+            font-size: 2.2rem
+            transition: .5s
+            font-weight: bold
+
+        .job-card-description
+            text-align: center
+            color: #fff
+            padding: 1rem
+            font-size: .9rem
+
+// rodape
+
+footer
+    background-color: $footer-bg
+    color: $text-color
+    padding: 5rem 2rem
+
+    .footer-container
+        max-width: 1200px
+        margin: 0 auto
+        display: flex
+        flex-wrap: wrap
+
+        .footer-title
+            color: #fff
+            font-weight: bold
+            margin-bottom: 1rem
+    .footer-desc-container, .footer-links-container
+        width: 50%
+    .footer-desc-container
+        p
+            width: 80%
+            line-height: 1.3
+            
+
+
+
