--- a/sass/styles.css
+++ b/sass/styles.css
@@ -17,6 +17,12 @@
   opacity: 0;
 }
 
+@media (max-width: 425px) {
+  .jobs-container .jobs-list .first-job, .jobs-container .jobs-list .other-jobs-container .job-card {
+    opacity: 1;
+  }
+}
+
 .jobs-container .jobs-list .first-job:hover .job-card-title, .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-title, .jobs-container .jobs-list .first-job:hover .job-card-cover, .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-cover, .jobs-container .jobs-list .first-job:hover .job-card-descripition, .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-descripition {
   opacity: 1;
 }
@@ -31,7 +37,7 @@
   color: #fff;
 }
 
-.btn :hover {
+.btn:hover {
   border-color: #ff520f;
   color: #ff520f;
 }
@@ -75,6 +81,18 @@ li {
   background-position: center;
 }
 
+@media (max-width: 425px) {
+  #main-banner {
+    height: 100vh;
+  }
+}
+
+@media (max-width: 425px) {
+  #main-banner nav {
+    display: none;
+  }
+}
+
 #main-banner .nav-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -89,6 +107,12 @@ li {
   padding: 1.5rem 2rem;
   background-color: #000;
   z-index: 10;
+}
+
+@media (max-width: 425px) {
+  #main-banner .nav-container {
+    padding: 1rem;
+  }
 }
 
 #main-banner .nav-container .brand {
@@ -128,8 +152,14 @@ li {
 
 #main-banner .nav-container .fas.fa-bars {
   font-size: 2rem;
-  color: #fff;
+  color: #FFF;
   display: none;
+}
+
+@media (max-width: 425px) {
+  #main-banner .nav-container .fas.fa-bars {
+    display: block;
+  }
 }
 
 #main-banner .title-container {
@@ -148,6 +178,13 @@ li {
       -ms-flex-pack: center;
           justify-content: center;
   height: 100%;
+}
+
+@media (max-width: 425px) {
+  #main-banner .title-container {
+    text-align: center;
+    padding: 2rem;
+  }
 }
 
 #main-banner .title-container h2 {
@@ -176,13 +213,26 @@ li {
   padding: 2rem;
 }
 
+@media (max-width: 425px) {
+  .services-container .services-card-container {
+    padding: 2rem 0;
+  }
+}
+
 .services-container .services-card-container .services-card {
   width: 30%;
   margin: 1%;
   padding: 2rem;
-  border: 1px solid #ccc;
+  border: 1px solid #CCC;
   -webkit-transition: .3s;
   transition: .3s;
+}
+
+@media (max-width: 425px) {
+  .services-container .services-card-container .services-card {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
 }
 
 .services-container .services-card-container .services-card i {
@@ -200,13 +250,12 @@ li {
 
 .services-container .services-card-container .services-card p {
   color: #8b8e94;
-  font-size: 1rem;
 }
 
 .services-container .services-card-container .services-card:hover {
   border: transparent;
-  -webkit-box-shadow: 0 1px 10px #ccc;
-          box-shadow: 0 1px 10px #ccc;
+  -webkit-box-shadow: 0 1px 10px #CCC;
+          box-shadow: 0 1px 10px #CCC;
 }
 
 .jobs-container {
@@ -214,11 +263,26 @@ li {
   padding: 3rem;
 }
 
+@media (max-width: 425px) {
+  .jobs-container {
+    padding: 2rem;
+  }
+}
+
 .jobs-container .jobs-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 2rem;
+  padding: 2rem 0;
+}
+
+@media (max-width: 425px) {
+  .jobs-container .jobs-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .jobs-container .jobs-list .first-job {
@@ -232,6 +296,15 @@ li {
   transition: .5s;
 }
 
+@media (max-width: 425px) {
+  .jobs-container .jobs-list .first-job {
+    width: 100%;
+    height: 200px;
+    margin: 0;
+    margin-bottom: 2rem;
+  }
+}
+
 .jobs-container .jobs-list .other-jobs-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -241,6 +314,16 @@ li {
   width: 68%;
 }
 
+@media (max-width: 425px) {
+  .jobs-container .jobs-list .other-jobs-container {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .jobs-container .jobs-list .other-jobs-container .job-card {
   width: 46%;
   height: 200px;
@@ -248,6 +331,15 @@ li {
   cursor: pointer;
   margin-bottom: 15px;
   margin-right: 15px;
+}
+
+@media (max-width: 425px) {
+  .jobs-container .jobs-list .other-jobs-container .job-card {
+    width: 100%;
+    height: 200px;
+    margin: 0;
+    margin-bottom: 2rem;
+  }
 }
 
 .jobs-container .jobs-list .other-jobs-container #job2 {
@@ -279,7 +371,7 @@ li {
 
 .jobs-container .jobs-list .job-card-title {
   text-align: center;
-  color: #fff;
+  color: #FFF;
   font-size: 2.2rem;
   -webkit-transition: .5s;
   transition: .5s;
@@ -288,7 +380,7 @@ li {
 
 .jobs-container .jobs-list .job-card-description {
   text-align: center;
-  color: #fff;
+  color: #FFF;
   padding: 1rem;
   font-size: .9rem;
 }
@@ -309,8 +401,18 @@ footer .footer-container {
       flex-wrap: wrap;
 }
 
+@media (max-width: 425px) {
+  footer .footer-container {
+    max-width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 footer .footer-container .footer-title {
-  color: #fff;
+  color: #FFF;
   font-weight: bold;
   margin-bottom: 1rem;
 }
@@ -319,8 +421,76 @@ footer .footer-desc-container, footer .footer-links-container {
   width: 50%;
 }
 
+@media (max-width: 425px) {
+  footer .footer-desc-container, footer .footer-links-container {
+    width: 100%;
+    margin-bottom: 2rem;
+    text-align: center;
+  }
+}
+
 footer .footer-desc-container p {
   width: 80%;
   line-height: 1.3;
+}
+
+@media (max-width: 425px) {
+  footer .footer-desc-container p {
+    width: 100%;
+  }
+}
+
+footer .footer-links-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (max-width: 425px) {
+  footer .footer-links-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+footer .footer-links-container-list {
+  padding: 0 1rem;
+}
+
+@media (max-width: 425px) {
+  footer .footer-links-container-list {
+    margin-bottom: 2rem;
+  }
+}
+
+footer .footer-links-container-list li {
+  margin-bottom: .5rem;
+}
+
+footer .footer-links-container-list li a {
+  color: #8b8e94;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+footer .footer-links-container-list li a:hover {
+  color: #FFF;
+}
+
+footer .footer-copy-right-container {
+  width: 100%;
+  margin-top: 3rem;
+}
+
+@media (max-width: 425px) {
+  footer .footer-copy-right-container {
+    text-align: center;
+  }
+}
+
+footer .footer-copy-right-container p {
+  margin-bottom: 1rem;
 }
 /*# sourceMappingURL=styles.css.map */
