--- a/css/styles.css
+++ b/css/styles.css
@@ -1,56 +1,49 @@
-#main-banner .title-container h2, #main-banner .title-container h1 {
+#main-banner .title-container h1, #main-banner .title-container h2 {
   text-shadow: 3px 2px #000;
 }
 
-.services-container h2, .jobs-container h2 {
+.jobs-container h2, .services-container h2 {
   font-size: 3rem;
   margin-top: 2rem;
   text-align: center;
 }
 
-.jobs-container .jobs-list .first-job, .jobs-container .jobs-list .other-jobs-container .job-card {
+.jobs-container .jobs-list .other-jobs-container .job-card, .jobs-container .jobs-list .first-job {
   background-size: cover;
   background-position: center;
 }
 
-.jobs-container .jobs-list .first-job .job-card-title, .jobs-container .jobs-list .other-jobs-container .job-card .job-card-title, .jobs-container .jobs-list .first-job .job-card-cover, .jobs-container .jobs-list .other-jobs-container .job-card .job-card-cover, .jobs-container .jobs-list .first-job .job-card-descripition, .jobs-container .jobs-list .other-jobs-container .job-card .job-card-descripition {
+.jobs-container .jobs-list .other-jobs-container .job-card .job-card-title, .jobs-container .jobs-list .first-job .job-card-title, .jobs-container .jobs-list .other-jobs-container .job-card .job-card-cover, .jobs-container .jobs-list .first-job .job-card-cover, .jobs-container .jobs-list .other-jobs-container .job-card .job-card-description, .jobs-container .jobs-list .first-job .job-card-description {
   opacity: 0;
 }
-
 @media (max-width: 425px) {
-  .jobs-container .jobs-list .first-job, .jobs-container .jobs-list .other-jobs-container .job-card {
+  .jobs-container .jobs-list .other-jobs-container .job-card .job-card-title, .jobs-container .jobs-list .first-job .job-card-title, .jobs-container .jobs-list .other-jobs-container .job-card .job-card-cover, .jobs-container .jobs-list .first-job .job-card-cover, .jobs-container .jobs-list .other-jobs-container .job-card .job-card-description, .jobs-container .jobs-list .first-job .job-card-description {
     opacity: 1;
   }
 }
-
-.jobs-container .jobs-list .first-job:hover .job-card-title, .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-title, .jobs-container .jobs-list .first-job:hover .job-card-cover, .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-cover, .jobs-container .jobs-list .first-job:hover .job-card-descripition, .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-descripition {
+.jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-title, .jobs-container .jobs-list .first-job:hover .job-card-title, .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-cover, .jobs-container .jobs-list .first-job:hover .job-card-cover, .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-description, .jobs-container .jobs-list .first-job:hover .job-card-description {
   opacity: 1;
 }
 
 .btn {
-  padding: .6rem 1rem;
+  padding: 0.6rem 1rem;
   border: 1px solid #fff;
   text-transform: uppercase;
   border-radius: 5px;
-  -webkit-transition: .3s;
-  transition: .3s;
+  transition: 0.3s;
   color: #fff;
 }
-
 .btn:hover {
   border-color: #ff520f;
   color: #ff520f;
 }
-
 .btn-primary {
   background-color: #ff520f;
   border-color: #ff520f;
 }
-
 .btn-primary:hover {
   background-color: transparent;
 }
-
 .btn-rounded {
   margin-top: 1rem;
   border-radius: 2rem;
@@ -60,9 +53,8 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: 'lato';
+  box-sizing: border-box;
+  font-family: "Lato";
 }
 
 a {
@@ -74,32 +66,24 @@ li {
 }
 
 #main-banner {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), url("../img/office.jpg");
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/office.jpg");
   height: 85vh;
   background-size: cover;
   background-position: center;
 }
-
 @media (max-width: 425px) {
   #main-banner {
     height: 100vh;
   }
 }
-
 @media (max-width: 425px) {
   #main-banner nav {
     display: none;
   }
 }
-
 #main-banner .nav-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   position: fixed;
   top: 0;
   left: 0;
@@ -108,89 +92,61 @@ li {
   background-color: #000;
   z-index: 10;
 }
-
 @media (max-width: 425px) {
   #main-banner .nav-container {
     padding: 1rem;
   }
 }
-
 #main-banner .nav-container .brand {
   color: #fff;
   font-size: 2rem;
-  -webkit-transition: .3s;
-  transition: .3s;
+  transition: 0.3s;
 }
-
 #main-banner .nav-container .brand:hover {
   color: #ff520f;
 }
-
 #main-banner .nav-container-navbar {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   height: 100%;
 }
-
 #main-banner .nav-container-navbar li {
   margin: 5px 10px;
 }
-
 #main-banner .nav-container-navbar li a {
   color: #fff;
-  -webkit-transition: .3s;
-  transition: .3s;
+  transition: 0.3s;
 }
-
 #main-banner .nav-container-navbar li a:hover {
   color: #ff520f;
 }
-
 #main-banner .nav-container .fas.fa-bars {
   font-size: 2rem;
   color: #FFF;
   display: none;
 }
-
 @media (max-width: 425px) {
   #main-banner .nav-container .fas.fa-bars {
     display: block;
   }
 }
-
 #main-banner .title-container {
   color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 100%;
 }
-
 @media (max-width: 425px) {
   #main-banner .title-container {
     text-align: center;
     padding: 2rem;
   }
 }
-
 #main-banner .title-container h2 {
   font-size: 3rem;
 }
-
 #main-banner .title-container h1 {
   font-size: 4rem;
   margin-top: 1rem;
@@ -201,40 +157,30 @@ li {
   padding: 2rem;
   margin-bottom: 2rem;
 }
-
 .services-container .services-card-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: space-around;
   padding: 2rem;
 }
-
 @media (max-width: 425px) {
   .services-container .services-card-container {
     padding: 2rem 0;
   }
 }
-
 .services-container .services-card-container .services-card {
   width: 30%;
   margin: 1%;
   padding: 2rem;
   border: 1px solid #CCC;
-  -webkit-transition: .3s;
-  transition: .3s;
+  transition: 0.3s;
 }
-
 @media (max-width: 425px) {
   .services-container .services-card-container .services-card {
     width: 100%;
     margin-bottom: 2rem;
   }
 }
-
 .services-container .services-card-container .services-card i {
   color: #ff520f;
   font-size: 4rem;
@@ -242,49 +188,36 @@ li {
   margin-top: 1rem;
   margin-bottom: 1.5rem;
 }
-
 .services-container .services-card-container .services-card h3 {
   font-size: 1.5rem;
   margin-bottom: 1rem;
 }
-
 .services-container .services-card-container .services-card p {
   color: #8b8e94;
 }
-
 .services-container .services-card-container .services-card:hover {
   border: transparent;
-  -webkit-box-shadow: 0 1px 10px #CCC;
-          box-shadow: 0 1px 10px #CCC;
+  box-shadow: 0 1px 10px #CCC;
 }
 
 .jobs-container {
   background-color: #e5eaff;
   padding: 3rem;
 }
-
 @media (max-width: 425px) {
   .jobs-container {
     padding: 2rem;
   }
 }
-
 .jobs-container .jobs-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 2rem 0;
 }
-
 @media (max-width: 425px) {
   .jobs-container .jobs-list {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 }
-
 .jobs-container .jobs-list .first-job {
   width: 30%;
   height: 415px;
@@ -292,10 +225,8 @@ li {
   background-image: url("../img/job1.jpg");
   position: relative;
   cursor: pointer;
-  -webkit-transition: .5s;
-  transition: .5s;
+  transition: 0.5s;
 }
-
 @media (max-width: 425px) {
   .jobs-container .jobs-list .first-job {
     width: 100%;
@@ -304,26 +235,17 @@ li {
     margin-bottom: 2rem;
   }
 }
-
 .jobs-container .jobs-list .other-jobs-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   width: 68%;
 }
-
 @media (max-width: 425px) {
   .jobs-container .jobs-list .other-jobs-container {
     width: 100%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 }
-
 .jobs-container .jobs-list .other-jobs-container .job-card {
   width: 46%;
   height: 200px;
@@ -332,7 +254,6 @@ li {
   margin-bottom: 15px;
   margin-right: 15px;
 }
-
 @media (max-width: 425px) {
   .jobs-container .jobs-list .other-jobs-container .job-card {
     width: 100%;
@@ -341,23 +262,18 @@ li {
     margin-bottom: 2rem;
   }
 }
-
 .jobs-container .jobs-list .other-jobs-container #job2 {
   background-image: url("../img/job2.jpg");
 }
-
 .jobs-container .jobs-list .other-jobs-container #job3 {
   background-image: url("../img/job3.jpg");
 }
-
 .jobs-container .jobs-list .other-jobs-container #job4 {
   background-image: url("../img/job4.jpg");
 }
-
 .jobs-container .jobs-list .other-jobs-container #job5 {
   background-image: url("../img/job5.jpg");
 }
-
 .jobs-container .jobs-list .job-card-cover {
   position: absolute;
   top: 0;
@@ -368,21 +284,18 @@ li {
   background-color: rgba(0, 0, 0, 0.6);
   border: 3px solid #ff520f;
 }
-
 .jobs-container .jobs-list .job-card-title {
   text-align: center;
   color: #FFF;
   font-size: 2.2rem;
-  -webkit-transition: .5s;
-  transition: .5s;
+  transition: 0.5s;
   font-weight: bold;
 }
-
 .jobs-container .jobs-list .job-card-description {
   text-align: center;
   color: #FFF;
   padding: 1rem;
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 
 footer {
@@ -390,37 +303,26 @@ footer {
   color: #8b8e94;
   padding: 5rem 2rem;
 }
-
 footer .footer-container {
   max-width: 1200px;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
-
 @media (max-width: 425px) {
   footer .footer-container {
     max-width: 100%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 }
-
 footer .footer-container .footer-title {
   color: #FFF;
   font-weight: bold;
   margin-bottom: 1rem;
 }
-
 footer .footer-desc-container, footer .footer-links-container {
   width: 50%;
 }
-
 @media (max-width: 425px) {
   footer .footer-desc-container, footer .footer-links-container {
     width: 100%;
@@ -428,69 +330,52 @@ footer .footer-desc-container, footer .footer-links-container {
     text-align: center;
   }
 }
-
 footer .footer-desc-container p {
   width: 80%;
   line-height: 1.3;
 }
-
 @media (max-width: 425px) {
   footer .footer-desc-container p {
     width: 100%;
   }
 }
-
 footer .footer-links-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 @media (max-width: 425px) {
   footer .footer-links-container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 }
-
 footer .footer-links-container-list {
   padding: 0 1rem;
 }
-
 @media (max-width: 425px) {
   footer .footer-links-container-list {
     margin-bottom: 2rem;
   }
 }
-
 footer .footer-links-container-list li {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
-
 footer .footer-links-container-list li a {
   color: #8b8e94;
-  -webkit-transition: .5s;
-  transition: .5s;
+  transition: 0.5s;
 }
-
 footer .footer-links-container-list li a:hover {
   color: #FFF;
 }
-
 footer .footer-copy-right-container {
   width: 100%;
   margin-top: 3rem;
 }
-
 @media (max-width: 425px) {
   footer .footer-copy-right-container {
     text-align: center;
   }
 }
-
 footer .footer-copy-right-container p {
   margin-bottom: 1rem;
 }
+
 /*# sourceMappingURL=styles.css.map */
