--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -198,7 +198,7 @@
 
     .job-card-title
       text-align: center
-      color: #FFF
+      color: #fff
       font-size: 2.2rem
       transition: .5s
       font-weight: bold
@@ -207,7 +207,14 @@
       text-align: center
       color: #FFF
       padding: 1rem
-      font-size: .9rem
+      font-size: 1.2rem
+      font-weight: bold
+      span
+        color: red
+
+        
+
+      
     
 footer
   background-color: $footer-bg
