--- a/css/styles.css
+++ b/css/styles.css
@@ -220,17 +220,21 @@ li {
 }
 .jobs-container .jobs-list .first-job {
   width: 30%;
-  height: 415px;
+  height: 515px;
   margin: 0 2%;
   background-image: url("../img/job1.jpg");
   position: relative;
   cursor: pointer;
   transition: 0.5s;
 }
+.jobs-container .jobs-list .first-job a {
+  margin: 8%;
+  padding: auto;
+}
 @media (max-width: 425px) {
   .jobs-container .jobs-list .first-job {
     width: 100%;
-    height: 200px;
+    height: 500px;
     margin: 0;
     margin-bottom: 2rem;
   }
@@ -248,7 +252,7 @@ li {
 }
 .jobs-container .jobs-list .other-jobs-container .job-card {
   width: 46%;
-  height: 200px;
+  height: 400px;
   position: relative;
   cursor: pointer;
   margin-bottom: 15px;
@@ -257,7 +261,7 @@ li {
 @media (max-width: 425px) {
   .jobs-container .jobs-list .other-jobs-container .job-card {
     width: 100%;
-    height: 200px;
+    height: 500px;
     margin: 0;
     margin-bottom: 2rem;
   }
@@ -294,7 +298,7 @@ li {
 .jobs-container .jobs-list .job-card-description {
   text-align: center;
   color: #FFF;
-  padding: 1rem;
+  padding: 1.2rem;
   font-size: 1.2rem;
   font-weight: bold;
 }
